--- a/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
+++ b/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
@@ -98,6 +98,7 @@
     <Compile Include="SingleObjectiveEvaluatorBase.cs" />
     <Compile Include="Sorter.cs" />
     <Compile Include="StochasticBranch.cs" />
+    <Compile Include="SubScopesRemover.cs" />
     <Compile Include="UnequalToComparator.cs" />
     <Compile Include="UniformSequentialSubScopesProcessor.cs" />
     <Compile Include="UniformParallelSubScopesProcessor.cs" />
