--- a/sources/HeuristicLab.SQLite/HeuristicLab.SQLite.csproj
+++ b/sources/HeuristicLab.SQLite/HeuristicLab.SQLite.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeuristicLabSQLitePlugin.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
