--- a/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
+++ b/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
@@ -100,6 +100,7 @@
     <Compile Include="HeuristicLabStructureIdentificationPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RampedTreeCreator.cs" />
+    <Compile Include="Recombination\OnePointCrossOver.cs" />
     <Compile Include="Recombination\StandardCrossOver.cs" />
     <Compile Include="Recombination\SizeFairCrossOver.cs" />
     <Compile Include="TreeGardener.cs" />
