--- a/sources/HeuristicLab.Logging/HeuristicLab.Logging.csproj
+++ b/sources/HeuristicLab.Logging/HeuristicLab.Logging.csproj
@@ -63,6 +63,12 @@
   <ItemGroup>
     <Compile Include="BestAverageWorstQualityCalculator.cs" />
     <Compile Include="BestSolutionStorer.cs" />
+    <Compile Include="PointXYChartView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PointXYChartView.Designer.cs">
+      <DependentUpon>PointXYChartView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Logger.cs" />
     <Compile Include="Linechart.cs" />
     <Compile Include="HeuristicLabLoggingPlugin.cs" />
@@ -78,6 +84,8 @@
     <Compile Include="LogView.Designer.cs">
       <DependentUpon>LogView.cs</DependentUpon>
     </Compile>
+    <Compile Include="PointXYChart.cs" />
+    <Compile Include="PointXYChartInjector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QualityLogger.cs" />
     <Compile Include="Log.cs" />
@@ -114,6 +122,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="PointXYChartView.resx">
+      <DependentUpon>PointXYChartView.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="LinechartView.resx">
       <DependentUpon>LinechartView.cs</DependentUpon>
       <SubType>Designer</SubType>
