--- a/sources/HeuristicLab.Hive.Client.Console/HeuristicLab.Hive.Client.Console.csproj
+++ b/sources/HeuristicLab.Hive.Client.Console/HeuristicLab.Hive.Client.Console.csproj
@@ -51,6 +51,26 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HeuristicLab.Charting-3.2, Version=3.2.0.582, Culture=neutral, PublicKeyToken=ba48961d6f65dcec, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\HeuristicLab.Charting\bin\Debug\HeuristicLab.Charting-3.2.dll</HintPath>
+    </Reference>
+    <Reference Include="HeuristicLab.Charting.Data-3.2, Version=3.2.0.582, Culture=neutral, PublicKeyToken=ba48961d6f65dcec, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\HeuristicLab.Charting.Data\bin\Debug\HeuristicLab.Charting.Data-3.2.dll</HintPath>
+    </Reference>
+    <Reference Include="HeuristicLab.Core-3.2, Version=3.2.0.817, Culture=neutral, PublicKeyToken=ba48961d6f65dcec, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\HeuristicLab.Core\bin\Debug\HeuristicLab.Core-3.2.dll</HintPath>
+    </Reference>
+    <Reference Include="HeuristicLab.Data-3.2, Version=3.2.0.776, Culture=neutral, PublicKeyToken=ba48961d6f65dcec, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\HeuristicLab.Data\bin\Debug\HeuristicLab.Data-3.2.dll</HintPath>
+    </Reference>
+    <Reference Include="HeuristicLab.Operators-3.2, Version=3.2.0.801, Culture=neutral, PublicKeyToken=ba48961d6f65dcec, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\HeuristicLab.Operators\bin\Debug\HeuristicLab.Operators-3.2.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -66,8 +86,18 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="ZedGraph, Version=5.1.4.31904, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Program Files\HeuristicLab 3.0\plugins\ZedGraph.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventLogEntryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EventLogEntryForm.Designer.cs">
+      <DependentUpon>EventLogEntryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="HiveClientConsole.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,10 +106,14 @@
     </Compile>
     <Compile Include="HiveClientConsolePlugin.cs" />
     <Compile Include="HiveClientConsoleApplication.cs" />
+    <Compile Include="HiveEventEntry.cs" />
     <Compile Include="IPAdressTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EventLogEntryForm.resx">
+      <DependentUpon>EventLogEntryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HiveClientConsole.resx">
       <DependentUpon>HiveClientConsole.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -92,6 +126,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
@@ -106,10 +141,20 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HeuristicLab.Logging\HeuristicLab.Logging.csproj">
+      <Project>{4095C92C-5A4C-44BC-9963-5F384CF5CC3F}</Project>
+      <Name>HeuristicLab.Logging</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Error.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Info.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
