--- a/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
@@ -85,6 +85,13 @@
     <Compile Include="And.cs" />
     <Compile Include="Average.cs" />
     <Compile Include="BakedTreeEvaluator.cs" />
+    <Compile Include="ConfigurableFunctionLibraryInjector.cs" />
+    <Compile Include="ConfigurableFunctionLibraryInjectorView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ConfigurableFunctionLibraryInjectorView.Designer.cs">
+      <DependentUpon>ConfigurableFunctionLibraryInjectorView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Constant.cs" />
     <Compile Include="AlgorithmBase.cs" />
     <Compile Include="Evaluators\MeanAbsolutePercentageOfRangeErrorEvaluator.cs" />
