--- a/sources/HeuristicLab.SGA.Hardwired/3.3/HeuristicLab.SGA.Hardwired-3.3.csproj
+++ b/sources/HeuristicLab.SGA.Hardwired/3.3/HeuristicLab.SGA.Hardwired-3.3.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateChildrenHardWired.cs" />
     <Compile Include="HeuristicLabSGAHardwiredPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CreateChildren.cs" />
