--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -114,6 +114,12 @@
     <Compile Include="FloatingAvgAggregator.cs" />
     <Compile Include="LabelProvider\ContinuousLabelProvider.cs" />
     <Compile Include="LabelProvider\DiscreteLabelProvider.cs" />
+    <Compile Include="Options\ColorSelection.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Options\ColorSelection.Designer.cs">
+      <DependentUpon>ColorSelection.cs</DependentUpon>
+    </Compile>
     <Compile Include="XAxisDescriptor.cs" />
     <Compile Include="YAxisGrid.cs" />
     <Compile Include="HorizontalLineShape.cs" />
@@ -195,6 +201,9 @@
     <EmbeddedResource Include="LineChart.resx">
       <DependentUpon>LineChart.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Options\ColorSelection.resx">
+      <DependentUpon>ColorSelection.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Options\Options.resx">
       <DependentUpon>Options.cs</DependentUpon>
