--- a/sources/HeuristicLab/HeuristicLab.csproj
+++ b/sources/HeuristicLab/HeuristicLab.csproj
@@ -160,8 +160,7 @@ set Outdir=$(Outdir)
 set Platform=$(PlatformName)
 
 call MergeConfigs.cmd
-call CopyAssemblies.cmd
-call UpdateLocalInstallation.cmd</PostBuildEvent>
+call CopyAssemblies.cmd</PostBuildEvent>
     <PreBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
 set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
