--- a/HeuristicLab/3.3/Properties/Settings.settings
+++ b/HeuristicLab/3.3/Properties/Settings.settings
@@ -1,12 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HeuristicLab.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="User" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">unknown</Value>
-    </Setting>
-    <Setting Name="Organization" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">unknown</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
